# binaryen-interfaces

./: .gitignore  README.md
kbinaryen/: README.md  build.gradle.kts  settings.gradle
kbinaryen/src/main/kotlin/: TryBinaryen.kt
kbinaryen/src/main/kotlin/net/razorvine/kbinaryen/: Binaryen.kt
kbinaryen/src/main/kotlin/razorvine/kbinaryen/: Binaryen.kt  MainTest.kt  SimpleTest.kt
kbinaryen/src/test/kotlin/: SimpleTest.kt
pybinaryen/: LICENSE  MANIFEST.in  Makefile  README.md  binaryen-c-pp.h  binaryen.py  build_ffi_module-staticlib.py  build_ffi_module.py  generate_kotlinsource.py  setup.cfg  setup.py  tox.ini
pybinaryen/tests/: test_binaryen.py
