[metadata]
description = python bindings for the binaryen webassembly library
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/irmen/binaryen-interfaces/tree/master/pybinaryen
author = Irmen de Jong
author_email = irmen@razorvine.net
keywords = webassembly
license = MIT
license_files = LICENSE
classifiers =
    License-Expression :: MIT
    Development Status :: 4 - Beta
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3

[pycodestyle]
max-line-length = 120
exclude = .git,__pycache__,.tox,.eggs,.mypy_cache,build,build_ffi_module.py,build_ffi_module-staticlib.py
